--- a/note/20180119graph.md
+++ b/note/20180119graph.md
@@ -76,3 +76,40 @@ private void print(int[] prev, int s, int t) { // 递归打印s->t的路径
   System.out.print(t + " ");
 }
 ```
+
+#### 深度优先算法（DFS)
+```     
+        boolean found = false; // 全局变量或者类成员变量
+   
+       /**
+        * 有个比较特殊的变量 found，它的作用是，当我们已经找到终止顶点 t 之后，我们就不再递归地继续查找了
+        * @param s
+        * @param t
+        */
+       public void dfs(int s, int t) {
+           found = false;
+           boolean[] visited = new boolean[v];
+           int[] prev = new int[v];
+           for (int i = 0; i < v; ++i) {
+               prev[i] = -1;
+           }
+           recurDfs(s, t, visited, prev);
+           print(prev, s, t);
+       }
+   
+       private void recurDfs(int w, int t, boolean[] visited, int[] prev) {
+           if (found == true) return;
+           visited[w] = true;
+           if (w == t) {
+               found = true;
+               return;
+           }
+           for (int i = 0; i < adj[w].size(); ++i) {
+               int q = adj[w].get(i);
+               if (!visited[q]) {
+                   prev[q] = w;
+                   recurDfs(q, t, visited, prev);
+               }
+           }
+       }
+       ```
